--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <div class="contact-content">
         <div class="contact-card">
           <h3>Get in Touch</h3>
-          <div class="contact-item"><i>📧</i> danielarose005@example.com</div>
+          <div class="contact-item"><i>📧</i> danielarose005@gmail.com</div>
           <div class="contact-item"><i>📱</i> +63 961 467 5662</div>
         </div>
       </div>
